[workspace]

members = [ "crawler-geek",
  "fib",
  "httpie", 
  "lifetime", 
  "mem-management",
  "mock-chatroom", 
  "multi-ownership", 
  "ownership", 
  "first-rust", 
  "httpie", 
  "json2excel",
  "mock-chatroom", 
  "queryer", 
  "queryer-py",
  "testlib", 
  "thumbor", 
  "type-sys", 
  "trait-example", 
  "trait-example2", 
  "trait-example3", "sentence-iter"]

