[workspace]

members = [ "crawler-geek",
  "fib",
  "httpie", 
  "lifetime", 
  "mem-management",
  "mock-chatroom", 
  "multi-ownership", 
  "ownership", 
  "first-rust", 
  "httpie", 
  "mock-chatroom", 
  "queryer", 
  "queryer-py",
  "testlib", 
  "thumbor", 
  "type-sys", 
  "trait-example", 
  "trait-example2", 
  "trait-example3", "sentence-iter", "common-traits", "from-into", "common-trait-cow", "iterator", "closure-1", "closure-fnonece", "closure-fnmut", "bytes-example", "kv-server", "rgrep"]

